# AGI-Alpha-Agent-v0

./: .dockerignore  .editorconfig  .env.sample  .flake8  .gitignore  .percy.yml  .pre-commit-config.yaml  AGENTS.md  BACKGROUND.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LAUNCH.md  Makefile  README.md  SECURITY.md  check_env.py  docker-compose.yml  edge_runner.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  quickstart.sh  requirements-demo.txt  requirements-dev.txt  requirements.txt  run_quickstart.sh  sandbox.Dockerfile  semgrep.yml  testing_notes.md
.codex/: setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  build-and-test.yml  ci.yml  deploy-kind.yml  docs.yml  loadtest.yml  nightly-transfer.yml  security.yml  size-check.yml  smoke.yml  tests.yml
af_requests/: __init__.py
alpha_factory_v0/: Dockerfile  Dockerfile.multi  README.md  docker-compose.override.yml  docker-compose.yml  docker‑compose.override.yml  install_alpha_factory_pro.sh  requirements-lock.txt
alpha_factory_v0/backend/: __init__.py  a2a_client.py  agent_base.py  alpha_model.py  biotech_agent.py  broker_ibkr.py  data_feed.py  finance_agent.py  manufacturing_agent.py  market_data.py  memory.py  planner_agent.py  policy_agent.py  portfolio.py  requirements.txt  risk.py  rpc_server.py  trace_ws.py  tracer.py
alpha_factory_v0/docs/: REMOTE_SWARM.md
alpha_factory_v0/tests/: conftest.py  test_smoke.py
alpha_factory_v0/ui/: app.py  trace‑graph.html
alpha_factory_v1/: .env.sample  Dockerfile  Dockerfile.multi  README.md  __init__.py  __main__.py  af_requests.py  docker-compose.override.yml  docker-compose.yml  edge_runner.py  entrypoint.sh  install_alpha_factory.sh  install_alpha_factory_pro.sh  quickstart.py  quickstart.sh  requests.py  requirements-colab.txt  requirements-core.txt  requirements-lock.txt  requirements.txt  run.py
alpha_factory_v1/backend/: README.md  __init__.py  a2a_client.py  adk_bridge.py  adk_wrappers.py  agent_base.py  agent_factory.py  agent_manager.py  agent_runner.py  agent_scheduler.py  agent_supervisor.py  alpha_model.py  api_server.py  broker.py  broker_alpaca.py  broker_ibkr.py  data_feed.py  demo_orchestrator.py  evolution_engine.py  finance_agent.py  genetic_tests.py  governance.py  llm_provider.py  logger.py  main.py  manufacturing_agent.py  market_data.py  mcp_bridge.py  memory.py  memory_fabric.py  memory_graph.py  memory_vector.py  metrics.py  metrics_registry.py  model_provider.py  muzero_engine.py  orchestrator.py  orchestrator_base.py  orchestrator_utils.py  planner_agent.py  (+12 more)
alpha_factory_v1/common/: __init__.py
alpha_factory_v1/core/: __init__.py  evolve.py  memeplex.ts  orchestrator.py  replay.ts  telemetry.js
alpha_factory_v1/dashboards/: README.md  (+1 more)
benchmarks/: docker_runner.py  run_benchmarks.py
codex/: setup.sh
data/: sector_equity_map.csv
docs/: 404.html  ADVANCED_GITHUB_PAGES_DEMO_SPRINT.md  API.md  ARCHITECTURE.md  AT_THE_EDGE_OF_HUMAN_KNOWLEDGE_DEMO_TASKS_SPRINT.md  AT_THE_EDGE_OF_KNOWLEDGE_DEMO_TASKS_SPRINT.md  CHANGELOG.md  CODEX_ADVANCED_DEMO_PAGES_SPRINT.md  CODEX_DEMO_PAGES_SPRINT.md  CODEX_INSIGHT_PAGES_SPRINT.md  CODEX_SUPER_DEMO_PAGES_SPRINT.md  DEMO_ACCESS_SPRINT.md  DEMO_GALLERY.md  DEPLOYMENT_QUICKSTART.md  DESIGN.md  EDGE_DEMO_PAGES_SPRINT.md  EDGE_OF_HUMAN_KNOWLEDGE_PAGES_SPRINT.md  EDGE_OF_KNOWLEDGE_DEMO_SPRINT.md  GITHUB_PAGES_DEMO_TASKS.md  HOSTING_INSTRUCTIONS.md  INSIGHT_ACCESS_SPRINT.md  INSIGHT_SPRINT_PLAN.md  OFFLINE.md  OFFLINE_INSTALL.md  OFFLINE_SETUP.md  OVERVIEW.md  POLICY_RUNBOOK.md  QUICKSTART_BASICS.md  README.md  USER_FRIENDLY_DEMO_PAGES_SPRINT.md  deployment_security.md  dgm_ops.md  gallery.html  index.html  quickstart.md  sandbox.md
experiments/: ablate_selector.py
infrastructure/: Dockerfile  docker-compose.yml  docker-entrypoint.sh  evolution_worker.Dockerfile
policies/: deny_exfil.rego  deny_finance.rego  deny_insider.rego
requests/: __init__.py
scripts/: audit_archive.py  build_gallery_site.sh  build_insight_docs.sh  build_offline_wheels.sh  build_open_gallery.sh  build_service_worker.py  capture_demo_preview.py  check_python_deps.py  convert_openai_gpt2.py  create_release_tag.sh  demo_setup.sh  deploy_gallery_pages.sh  deploy_insight_demo.sh  deploy_insight_full.sh  download_gpt2_small.py  download_hf_gpt2.py  download_openai_gpt2.py  download_wasm_gpt2.py  dp_scrubber.py  edge_human_knowledge_pages_sprint.py  edge_human_knowledge_pages_sprint.sh  edge_of_knowledge_sprint.sh  env_check.sh  fetch_assets.py  gallery_sprint.sh  gen_proto.py  generate_demo_docs.py  generate_gallery_html.py  health_check.py  insight_sprint.sh  launch_gallery.py  mirror_demo_pages.py  offline_prepare.sh  open_demo.py  open_demo.sh  open_gallery.py  open_gallery.sh  open_subdir_demo.py  open_subdir_demo.sh  open_subdir_gallery.py  (+26 more)
src/: __init__.py  archive.py  evolve.py  memeplex.ts  replay.ts  scheduler.py  taxonomy.ts  telemetry.js
tests/: .mutmut-config  README.md  __init__.py  conftest.py  golden_checksum.txt  gpu_flag.test.js  memeplex.test.ts  service_worker_cache.spec.ts  taxonomy.test.ts  test_ablation.py  test_adapters.py  test_adk_agent.py  test_adk_gateway.py  test_adk_gateway_startup.py  test_af_requests.py  test_agent_aiga_entrypoint.py  test_agent_base.py  test_agent_experience_entrypoint.py  test_agent_factory.py  test_agent_handle_methods.py  test_agent_logging.py  test_agent_manager_consumer.py  test_agent_muzero_entrypoint.py  test_agent_runner.py  test_agents.py  test_agents_alias.py  test_agents_fallback.py  test_agents_integrity.py  test_agents_registry.py  test_aiga_agents_bridge.py  test_aiga_agents_import.py  test_aiga_bridge_no_agents.py  test_aiga_evolver_agent.py  test_aiga_evolver_agent_logic.py  test_aiga_meta_cli.py  test_aiga_meta_module.py  test_aiga_offline_setup.py  test_aiga_openai_bridge_offline.py  test_aiga_service.py  test_aiga_service_e2e.py  (+342 more)
tools/: build_wheelhouse.sh  check_env_table.py  gen_proto_stubs.sh  setup_precommit.sh
wheels/: README.md
(+1198 files in other folders)
